Fixing some layout and overflow issue

--- a/css/general/about.css
+++ b/css/general/about.css
@@ -96,8 +96,15 @@
     .about-me {
         grid-template-columns: 1fr;
     }
+
     .sidebar {
         position: relative;
         top: 10px;
+        z-index: -1;
+    }
+
+    .content {
+        width: 100%;
+        padding: 0;
     }
 }
