--- a/css/general/home.css
+++ b/css/general/home.css
@@ -50,4 +50,8 @@
         max-width: 100%;
         margin-top: 50px;
     }
+
+    .blog-section {
+        margin-top: 255px;
+    }
 }
